fix collapsing height in safari

--- a/src/styles/pricing/pricing-hero.scss
+++ b/src/styles/pricing/pricing-hero.scss
@@ -10,6 +10,7 @@
     flex: 1 1 50%;
 
     @media (max-width: 530px) {
+      flex: 0 0 auto;
       max-width: 100%;
       width: 300px;
     }
